--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "landing-pg",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js --no-cache",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +15,8 @@
     "parcel": "^2.12.0",
     "parcel-bundler": "^1.12.5",
     "sharp": "^0.31.3"
+  },
+  "dependencies": {
+    "cssnano": "^4.1.11"
   }
 }
